--- a/cms/style.css
+++ b/cms/style.css
@@ -265,9 +265,10 @@ header {
   text-align: center;
   color: #fff;
   background-attachment: scroll;
-  background-image: url(https://unsplash.imgix.net/uploads%2F14115408840644deb16b0%2F2dc933e3?q=75&fm=jpg&auto=format&s=7f43646e4d26049c6c39890afb2e5ced);
-  background-position: center center;
+  background-image: url('../cms/img/out.png');
   background-repeat: none;
+  background-repeat: no-repeat;
+  background-size: 795px 578px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -285,7 +286,6 @@ header .intro-text .intro-lead-in {
   font-size: 22px;
   font-style: italic;
   line-height: 22px;
-  background-color: #17d0d5;
 }
 
 header .intro-text .intro-heading {
